--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 
 /* Fonts: Karla and Inter */
 
+:root {
+    --white: rgb(204, 204, 204);
+    --title-green: #4ADF86;
+    --btn-green: #10B981;
+    --pass-green: #55F991;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -17,12 +24,62 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(0, 16, 31);
+    background-color: #0c0a29;
 }
 
 .card {
-    width: 40%;
+    width: 80%;
     min-height: 60%;
-    border: white 1px dotted;
-    background-color: rgb(0, 26, 50);
+    padding: 3rem;
+    background-color: #0a1d39;
+}
+
+header {
+    min-height: 8.35rem;
+    border-bottom: rgb(231, 231, 231, .15) 1px solid;
+    margin-bottom: 8.35rem;
+}
+
+header h1 {
+    color: var(--white);
+    font-family: 'Karla', Arial, Helvetica, sans-serif;
+    font-weight: 800;
+    font-size: .9rem;
+    margin-bottom: .2rem;
+}
+
+header h1 span {
+    color: var(--title-green);
+    font-family: 'Karla', Arial, Helvetica, sans-serif;
+}
+
+header p {
+    color: var(--white);
+    margin-bottom: 1.5rem;
+    font-size: .65rem;
+}
+
+header button {
+    width: 80%;
+    min-height: 2rem;
+    padding: .2rem;
+    padding-left: .8rem;
+    /*  */
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    /*  */
+    background-color: var(--btn-green);
+    font-size: .67rem;
+    font-weight: 600;
+    color: var(--white);
+    border-radius: .25rem;
+}
+
+header button:active {
+    background-color: #1b9f73;
+}
+
+header button svg {
+    margin-right: .7rem;
 }
