ADDED PARENTHESES, Basically the same, did the copy to clipboard API

--- a/style.css
+++ b/style.css
@@ -101,9 +101,16 @@ section [type="button"] {
     color: var(--pass-green);
     /*  */
     font-size: .67rem;
+    text-align: center;
     /*  */
+    cursor: pointer;
     transition: 100ms;
 }
+
+
+/* section [type="button"]::selection {
+    background-color: transparent;
+} */
 
 section [type="button"]:nth-child(4) {
     margin-bottom: 1.5rem;
