--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ header button svg {
 section {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 section [type="button"] {
@@ -108,11 +109,6 @@ section [type="button"] {
     cursor: pointer;
     transition: 100ms;
 }
-
-
-/* section [type="button"]::selection {
-    background-color: transparent;
-} */
 
 section [type="button"]:nth-child(4) {
     margin-bottom: 1.5rem;
@@ -166,4 +162,35 @@ footer svg {
     width: 24px;
     height: 24px;
     margin-right: .3rem;
+}
+
+
+/* Media queries */
+
+@media (min-width:460px) {
+    header h1 {
+        font-size: 1.3rem;
+    }
+    header p {
+        font-size: .75rem;
+    }
+    header button {
+        min-height: 2.4rem;
+        width: 60%;
+    }
+    section {
+        min-height: 10rem;
+        align-items: flex-start;
+    }
+    section [type="button"] {
+        flex: 0 0 8rem;
+        min-height: 3rem;
+        margin: 0;
+    }
+    section [type="button"]:nth-child(n+3) {
+        margin-bottom: 1.5rem;
+    }
+    section p {
+        font-size: .6rem;
+    }
 }
