--- a/style.css
+++ b/style.css
@@ -194,3 +194,77 @@ footer svg {
         font-size: .6rem;
     }
 }
+
+@media (min-width:740px) {
+    header h1 {
+        font-size: 1.5rem;
+    }
+    header p {
+        font-size: .95rem;
+    }
+    header svg {
+        margin: 0 1rem 0;
+    }
+    header button {
+        min-height: 2.6rem;
+        width: 40%;
+        font-size: .75rem;
+    }
+    section {
+        min-height: 10rem;
+        align-items: flex-start;
+    }
+    section [type="button"] {
+        flex: 0 0 15rem;
+        min-height: 3rem;
+        margin: 0;
+    }
+    section [type="button"]:nth-child(n+3) {
+        margin-bottom: 1.5rem;
+    }
+    section p {
+        font-size: .7rem;
+    }
+    footer {
+        width: 60vw;
+        max-height: 4rem;
+        /*  */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 300px;
+        opacity: 0;
+        z-index: -2;
+        /*  */
+        color: var(--white);
+        background-color: var(--btn-green);
+        border-radius: .25rem;
+        /*  */
+        font-size: .8rem;
+    }
+    footer.active {
+        animation-name: popup;
+        animation-duration: 3s;
+        animation-iteration-count: 1;
+    }
+    @keyframes popup {
+        10% {
+            top: 10rem;
+            opacity: 1;
+        }
+        60% {
+            top: 10rem;
+            opacity: 1;
+        }
+        100% {
+            top: 300px;
+            opacity: 0;
+        }
+    }
+    footer svg {
+        width: 24px;
+        height: 24px;
+        margin-right: .3rem;
+    }
+}
